# deep-learning-v2-pytorch

./: .cruft.json  .gitattributes  .log4brains.yml  .pre-commit-config.yaml  CONTRIBUTING_GUIDE.rst  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codeql.yml  constraints.txt  publish_log4brains.yml  release.yml
adl/: 404.html  index.html
adl/adr/: 20210124-use-log4brains-to-manage-the-adrs.html  20210124-use-markdown-architectural-decision-records.html
adl/data/chRxu3inJ2-rho0XzAt3a/: adrs.json
deep_learning_v2_pytorch/: __init__.py  main.py
deep_learning_v2_pytorch/attention/: Attention_Basics.ipynb  Attention_Basics_Solution.ipynb
deep_learning_v2_pytorch/autoencoder/convolutional-autoencoder/: Convolutional_Autoencoder_Exercise.ipynb  Convolutional_Autoencoder_Solution.ipynb  Upsampling_Solution.ipynb
deep_learning_v2_pytorch/autoencoder/denoising-autoencoder/: Denoising_Autoencoder_Exercise.ipynb  Denoising_Autoencoder_Solution.ipynb
deep_learning_v2_pytorch/autoencoder/linear-autoencoder/: Simple_Autoencoder_Exercise.ipynb  Simple_Autoencoder_Solution.ipynb
deep_learning_v2_pytorch/batch-norm/: Batch_Normalization.ipynb
deep_learning_v2_pytorch/convolutional-neural-networks/cifar-cnn/: cifar10_cnn_augmentation.ipynb  cifar10_cnn_exercise.ipynb  cifar10_cnn_solution.ipynb
deep_learning_v2_pytorch/convolutional-neural-networks/conv-visualization/: conv_visualization.ipynb  custom_filters.ipynb  maxpooling_visualization.ipynb
deep_learning_v2_pytorch/convolutional-neural-networks/mnist-mlp/: mnist_mlp_exercise.ipynb  mnist_mlp_solution.ipynb  mnist_mlp_solution_with_validation.ipynb
deep_learning_v2_pytorch/cycle-gan/: CycleGAN_Exercise.ipynb  helpers.py
deep_learning_v2_pytorch/cycle-gan/samples_cyclegan/: samples_dir.txt
deep_learning_v2_pytorch/dcgan-svhn/: DCGAN_Exercise.ipynb  DCGAN_Solution.ipynb
deep_learning_v2_pytorch/gan-mnist/: MNIST_GAN_Exercise.ipynb  MNIST_GAN_Solution.ipynb
deep_learning_v2_pytorch/intro-neural-networks/gradient-descent/: GradientDescent.ipynb  GradientDescentSolutions.ipynb
deep_learning_v2_pytorch/intro-neural-networks/student-admissions/: StudentAdmissionsSolutions.ipynb
deep_learning_v2_pytorch/intro-to-pytorch/: Part 1 - Tensors in PyTorch (Exercises).ipynb  Part 1 - Tensors in PyTorch (Solution).ipynb  Part 2 - Neural Networks in PyTorch (Exercises).ipynb  Part 2 - Neural Networks in PyTorch (Solution).ipynb  Part 3 - Training Neural Networks (Solution).ipynb  Part 4 - Fashion-MNIST (Exercises).ipynb  Part 4 - Fashion-MNIST (Solution).ipynb  Part 5 - Inference and Validation (Exercises).ipynb  Part 5 - Inference and Validation (Solution).ipynb  Part 6 - Saving and Loading Models.ipynb  Part 7 - Loading Image Data (Solution).ipynb  Part 8 - Transfer Learning (Solution).ipynb  fc_model.py
deep_learning_v2_pytorch/keras/IMDB-keras/: IMDB_In_Keras.ipynb  IMDB_In_Keras_Solutions.ipynb
deep_learning_v2_pytorch/keras/cifar10-augmentation/: cifar10_augmentation.ipynb
deep_learning_v2_pytorch/keras/cifar10-classification/: cifar10_cnn.ipynb  cifar10_mlp.ipynb
deep_learning_v2_pytorch/keras/mnist-mlp/: mnist.model.best.hdf5  mnist_mlp.ipynb
deep_learning_v2_pytorch/project-bikesharing/: Predicting_bike_sharing_data.ipynb  my_answers.py
deep_learning_v2_pytorch/project-dog-classification/: README.md  dog_app.ipynb
deep_learning_v2_pytorch/project-face-generation/: dlnd_face_generation.ipynb  problem_unittests.py
deep_learning_v2_pytorch/project-tv-script-generation/: dlnd_tv_script_generation.ipynb  helper.py  problem_unittests.py
deep_learning_v2_pytorch/sentiment-analysis-network/: Sentiment_Classification_Projects.ipynb  Sentiment_Classification_Solutions.ipynb  Sentiment_Classification_Solutions_2_Better_Weight_Initialization.ipynb  reviews.txt
deep_learning_v2_pytorch/sentiment-rnn/: Sentiment_RNN_Exercise.ipynb  Sentiment_RNN_Solution.ipynb
deep_learning_v2_pytorch/style-transfer/: Style_Transfer_Exercise.ipynb  Style_Transfer_Solution.ipynb
deep_learning_v2_pytorch/transfer-learning/: Transfer_Learning_Exercise.ipynb  Transfer_Learning_Solution.ipynb
deep_learning_v2_pytorch/weight-initialization/: helpers.py  weight_initialization_exercise.ipynb  weight_initialization_solution.ipynb
deep_learning_v2_pytorch/word2vec-embeddings/: Negative_Sampling_Solution.ipynb  Skip_Grams_Exercise.ipynb  Skip_Grams_Solution.ipynb  utils.py
dev/py37-benchmark/: data.js
dev/py38-benchmark/: data.js
dev/py39-benchmark/: data.js
docs/: Makefile
docs/source/: adr.md  changelog.rst  conf.py  usage.md
tests/: __init__.py  test_main.py
(+39 files in other folders)
